= svKomodo News

== Changes in svKomodo 0.9-62

* Author field rebuild in DESCRIPTION file

* .onAttach() reworked to eliminate ::: (not allowed by CRAN)


== Changes in svKomodo 0.9-61

* Simplification of internal code to get Komodo location. It does not require
  a specific version of 'locate' on Unix/Linux any more.


== Changes in svKomodo 0.9-60

* .onAttach() is reworked for not issuing warning messages in Mac OS X.


== Changes in svKomodo 0.9-59

* R is now configured to be used with SciViews Komodo (Komodo Edit + SciViews-K)
  when the package is attached. It was previously configured when it was loaded.
  
* Temporary objects are now stored in SciViews:TempEnv instead of TempEnv and
  consequently, svMisc >= 0.9-68 is needed.
  
* Further protection before looking for komodo with locate: (1) if locate is not
  there, do not try to use it, and (2) do not use it on Mac OS X.


== Changes in svKomodo 0.9-58

* The package was not loading correctly when not on .libPaths. Fixed.


== Changes in svKomodo 0.9-57

* svKomodo creates now at loading a .Last.sys() function in SciViews:TempEnv
  indicating to Komodo Edit that R has quit. This is required to update R menus
  there.
  
* The SciViews-K configuration file is not saved from here anymore (CRAN
  now does not accept packages that write files elsewhere than in R temp dir).
  This configuration file is now created by the SciViews-K Komodo plugin, in
  svStart.R.


== Changes in svKomodo 0.9-56

* NEWS file reworked to use the new Rd format.


== Changes in svKomodo 0.9-55

* On some machines, system("locate Komodo ...") fails. Added some more checking
  in this situation.
  
* In .onLoad(), slight reworking of the svPager() function to avoid calling
  .Internal(file.show(....)).


== Changes in svKomodo 0.9-54

* Startup code is changed... a part of the code in svStart.R in the SciViews-K
  plugin is now executed here!
  
* Save and load SciViews config in ~/.SciViewsConfig.RData file, so that it is