@@ -13,7 +13,7 @@
     Package: \tab svMisc\cr
     Type: \tab Package\cr
     Version: \tab 0.9-70\cr
-    Date: \tab 2013-11-30\cr
+    Date: \tab 2014-03-01\cr
     License: \tab GPL 2 or above, at your convenience\cr
   }
   % TODO: add description of main functions here. Also add examples
